--- a/EmailScript/.classpath
+++ b/EmailScript/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="/Volumes/Mac_Drive/Projects/Jars/javax.mail.jar"/>
+	<classpathentry kind="lib" path="/Volumes/Mac_Drive/Projects/Jars/jsoup-1.8.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
